# rein-rtech

./: .gitmodules  Untitled Document 1  eksam_Rein_Jaks.odt  lab32.rviz  mymap.pgm  mymap1.pgm  roboti_k2si.rviz
bagfiles/: 2019-03-07-13-55-34.bag  subset.bag
eigen/: CMakeCache.txt
eigen/.hg/: dirstate
eigen/.hg/cache/: branch2-served  hgtagsfnodes1  rbc-revs-v1
eigen/.hg/store/: 00changelog.d  00changelog.i  00manifest.i  undo
movelt_rviz/: movelt_tutorials_planned.rviz
src/: .mymap3.pgm.swp  .mymap3.yaml.swp  mymap2.pgm  mymap2.yaml  mymap3.pgm  mymap3.yaml  pandaarmi_package.xml
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/src/: talker (copy).cpp  talker.cpp  talker.cpp.save
src/dual_manipulator_support/: package.xml
src/dual_manipulator_support/urdf/: dual_manipulator.xacro
src/motoman_sia5d_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/motoman_sia5d_moveit_config/config/: motoman_sia5d.srdf
src/motoman_sia5d_moveit_config/launch/: moveit.rviz
src/motoman_sia5d_moveit_config/src/: panda1.cpp
src/my_r2d2/config/: r2d2.rviz
src/my_r2d2/launch/: ar_tracker.launch  r2d2_new.launch
src/my_r2d2/urdf/: model.xacro  r2d2.urdf  r2d2.xacro  r2d2_kommidega.urdf  r2d3.urdf
src/planning_tutorial/: CMakeLists.txt  package.xml
src/planning_tutorial/launch/: panda_launcher.launch
src/planning_tutorial/src/: panda1.cpp  panda_robot1.cpp  panda_robot1eelmine.cpp
src/range_visualizer/: CMakeLists.txt  lab32.rviz  range.rviz
src/this_package_is_for_the_exam/: CMakeLists.txt  package.xml
(+20 files in other folders)
